--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 license = {text = "MIT"}
 authors = [
-    {name = "Eric Fang", email = "eric.fang@example.com"},
+    {name = "Jim Fang", email = "jimthebeacon@gmail.com"},
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
